# karplus_synth

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
include/: audio_errors.h  audio_logger.h  audio_player.h  audio_writer.h  karplus_string.h  karplus_synthsizer.h  safe_input.h
release/linux/: karplus
src/: audio_errors.cpp  audio_logger.cpp  audio_player.cpp  audio_writer.cpp  karplus_string.cpp  karplus_synthsizer.cpp  main.cpp  safe_input.cpp
